fdo#45001 fdo#77105 PDF Import: rotated text fixes

1. Fix 180 degrees text rotation;
2. Make rotated text fully editable.

Change-Id: Ie937f29031bbd0146207ce83678db351b65d2f8d